--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
+h1 {
+  font: 300 70px/1.3 'Oleo Script',sans-serif;
+  color: White;
+  text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
 
+p {
+  font: 50 80px/.2 'Oleo Script',sans-serif;
+  font-size: 50px;
+  color: WHite;
+  text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.wrapper {
+  display: grid;
+  grid-gap: 1px;
+  height: 600px;
+}
+
+.a {
+  grid-column: 1 / span 2;
+}
+
+.b {
+  grid-column: 3;
+  grid-row: 1 / span 2;
+}
+
+.c {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.d {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  padding: 20px;
+  text-decoration: none;
+  color: #C52233;
+}
+
+.topnav a:hover {
+  background-color: #D56AA0;
+  color: #C52233;
+}
+
+.topnav a.active {
+  background-color: #BB7E8C;
+  color: #C52233;
+}
+
+body {
+  padding: 0;
+  background-image: radial-gradient(circle, #2A2B3F, #272530);
+}
+
+.space {
+  width: 98vw;
+  height: 100vh;
+}
+ .earth {
+  width: 80vw;
+  height: 90vh;
+  bottom:0;
+  left: 10vw;
+  z-index: 99999;
+  padding-top: 50px;
+  padding-left: 150px;
+}
+
+  
+ 
