--- a/style.css
+++ b/style.css
@@ -85,5 +85,69 @@ body {
   padding-left: 150px;
 }
 
-  
+.grid-container {
+  display: grid;
+  grid-template-columns: auto ;
+  grid-template-rows: 100px 30px;
+  grid-gap: 10px;
+  background-color: grey;
+  padding: 10px;
+  }
+
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css";
+
+@mixin font-smoothing() {
+    // Font antialising on Mac OS X
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.social-icons {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+        display: inline-block;
+        margin: 0 0.25em;
+      float:left;
+    }
+
+    span {
+        display: block;
+        width: 0; height: 0;
+        overflow: hidden;
+    }
+
+    a {
+        display: inline-block;
+        width: 2.5em;
+        height: 2.5em;
+        border-radius: 50%;
+        text-decoration: none;
+        color: white;
+        text-align: center;
+
+        &:before {
+            font: 1.5em/1.75 "FontAwesome";
+            @include font-smoothing();
+        }
+
+        $icons: (
+            google:   (char: "\f0d5", color: #dd4b39),
+            facebook: (char: "\f09a", color: #3b5998),
+            github:   (char: "\f09b", color: #231f20),
+        );
+
+        @each $social, $icon in $icons {
+            &[href*="#{$social}"] {
+                background-color: map-get($icon, color);
+
+                &:before {
+                    content: map-get($icon, char);
+                }
+            }
+        }
+    }
+}
  
