--- a/style.css
+++ b/style.css
@@ -1,41 +1,14 @@
 h1 {
-  font: 300 70px/1.3 'Oleo Script',sans-serif;
-  color: White;
+  color: #FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 p {
-  font: 50 80px/.2 'Oleo Script',sans-serif;
   font-size: 50px;
-  color: WHite;
+  color:#FFFFFF;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.1);
   text-align: center;
-}
-
-.wrapper {
-  display: grid;
-  grid-gap: 1px;
-  height: 600px;
-}
-
-.a {
-  grid-column: 1 / span 2;
-}
-
-.b {
-  grid-column: 3;
-  grid-row: 1 / span 2;
-}
-
-.c {
-  grid-column: 1;
-  grid-row: 2;
-}
-
-.d {
-  grid-column: 2;
-  grid-row: 2;
 }
 
 ul {
@@ -69,11 +42,12 @@ li a {
 body {
   padding: 0;
   background-image: radial-gradient(circle, #2A2B3F, #272530);
+  
 }
 
 .space {
-  width: 98vw;
-  height: 100vh;
+  width: 100%;
+  height: auto;
 }
  .earth {
   width: 80vw;
@@ -85,69 +59,39 @@ body {
   padding-left: 150px;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: auto ;
-  grid-template-rows: 100px 30px;
-  grid-gap: 10px;
-  background-color: grey;
-  padding: 10px;
-  }
-
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css";
-
-@mixin font-smoothing() {
-    // Font antialising on Mac OS X
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
 }
 
-.social-icons {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-        display: inline-block;
-        margin: 0 0.25em;
-      float:left;
-    }
-
-    span {
-        display: block;
-        width: 0; height: 0;
-        overflow: hidden;
-    }
-
-    a {
-        display: inline-block;
-        width: 2.5em;
-        height: 2.5em;
-        border-radius: 50%;
-        text-decoration: none;
-        color: white;
-        text-align: center;
-
-        &:before {
-            font: 1.5em/1.75 "FontAwesome";
-            @include font-smoothing();
-        }
-
-        $icons: (
-            google:   (char: "\f0d5", color: #dd4b39),
-            facebook: (char: "\f09a", color: #3b5998),
-            github:   (char: "\f09b", color: #231f20),
-        );
-
-        @each $social, $icon in $icons {
-            &[href*="#{$social}"] {
-                background-color: map-get($icon, color);
-
-                &:before {
-                    content: map-get($icon, char);
-                }
-            }
-        }
-    }
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
 }
  
